Creando pagina de contactom para mas información

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                     <a class="nav-link" href="https://mauriciomauce.github.io/cvPlantillaBootstrap1/" target="_blank">CV Web</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
     </div>
-</nav>
+    </nav>
 
 
 <!---------------- Sección de Información -->
@@ -114,12 +114,21 @@
             </div>
         </div>
         <!-- Repite el bloque de código anterior para cada video -->
+        <div class="col-lg-3 col-md-4 mb-4">
+            <div class="card border-0">
+                <iframe width="100%" height="400" src="https://www.youtube.com/embed/BqRlAMS7OFg" frameborder="0" allowfullscreen></iframe>
+                <div class="card-body">
+                    <h5 class="card-title">Tarjeta animada</h5>
+                    <p class="card-text">Tarjeta de presentacón animada para compartir.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 </div>
 
 <!--------------------- Footer ------->
-<footer class="bg-dark text-white text-center py-3">
+<footer class="bg-danger text-white text-center py-3">
     <div class="container">
         <p>Síguenos en las redes sociales:</p>
 
@@ -141,8 +150,12 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15051.023404767557!2d-99.11638515!3d19.42295215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1feb0a26eb7a5%3A0x2d54c9b8876975ea!2sEl%20Parque%2C%20Ciudad%20de%20M%C3%A9xico%2C%20CDMX!5e0!3m2!1ses!2smx!4v1693633616959!5m2!1ses!2smx" width="600" height="350" class="mt-4 w-75 mx-3" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
-        <p class="pt-3">Derechos de autor © 2023 - Motion Graphics 🇲🇽</p>
-    
+        <p class="pt-3">Derechos de autor © 2023 - Motion Graphics 🇲🇽
+            <br>
+            < mauricio mauce co >
+        </p>
+
+
     </div>
 
     
