--- a/contacto.html
+++ b/contacto.html
@@ -48,10 +48,10 @@
             <img class="w-25 img-fluid img-profile mx-0 mb-4 " src="./assets/fotoPerfil.jpeg" alt="...">
             <div class="col-md-8  text-white">
                 <h2>Datos de contacto:</h2>
-                <ul class="listacontacto">
+                <ul">
                     <li><strong>Nombre:</strong> Mauricio I. Montes de Oca Rangel</li>
                     <li><strong>Email:</strong> <a class="correo" href=mailto:mauricio.mauce@icloud.com>mauricio.mauce@icloud.com</a></li>
-                    <li><strong>Teléfono (Whatsapp):</strong> 56-2012-3371</li>
+                    <li class="numero"><strong>Teléfono (Whatsapp):</strong> 56-2012-3371</li>
                     <br>
                     <a aria-label="Chat on WhatsApp" href="https://wa.me/15620123371" target="_blank"><img alt="Chat on WhatsApp" src="./assets/WhatsAppButtonGreenLarge.svg" />
                         <a />
