--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container">
         <a class="navbar-brand" href="">Mauricio I. Montes de Oca R.</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler bg-black" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon "></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
@@ -46,7 +46,7 @@
 <div class="container pt-5 text-white">
     <div class="row">
         <div class="col">
-            <h1>Bienvenido a mi galeria de Motion Graphics.</h1>
+            <h1>Bienvenido a mi galería de Motion Graphics.</h1>
             <br>
             <p class="info">Como diseñador gráfico,aquí te ofrezco una experiencia visual única. Cada video es una obra maestra de colores,
                 formas y narrativas que cobran vida. 
