--- a/contacto.html
+++ b/contacto.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="./CV Mauricio Issac Montes de Oca Rangel 23.pdf" download="CV Mauricio">CV</a>
+                        <a class="nav-link" href="./CV Mauricio Issac Montes de Oca Rangel 23.pdf" download="CV Mauricio">CV PDF</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://mauriciomauce.github.io/cvPlantillaBootstrap1/" target="_blank">CV Web</a>
