--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="./CV Mauricio Issac Montes de Oca Rangel 23.pdf" download="CV Mauricio">CV</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://mauriciomauce.github.io/cvPlantillaBootstrap1/" target="_blank">CV Web</a>
+                    <a class="nav-link" href="https://mauriciomauce.github.io/cvMauricioGit/" target="_blank">CV Web</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -64,12 +64,12 @@
 <div class="container mt-5">
     <div class="row">
         <!-- Aquí puedes repetir este bloque de código para cada video de YouTube -->
-        <div class="col-lg-3 col-md-4 mb-4">
+                <div class="col-lg-3 col-md-4 mb-4">
             <div class="card border-0">
-                <iframe width="100%" height="400" src="https://www.youtube.com/embed/Jc37mjRZ7Dc" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="400" src="https://www.youtube.com/embed/D4-ORZCjSs8?" frameborder="0" allowfullscreen></iframe>
                 <div class="card-body">
-                    <h5 class="card-title">Reel de Presentación</h5>
-                    <p class="card-text">Animación con pluggins para instagram.</p>
+                    <h5 class="card-title">Publicidad BMW</h5>
+                    <p class="card-text">Anuncio de 5 segundo para Tik Tok.</p>
                 </div>
             </div>
         </div>
@@ -125,10 +125,10 @@
         </div>
         <div class="col-lg-3 col-md-4 mb-4">
             <div class="card border-0">
-                <iframe width="100%" height="400" src="https://www.youtube.com/embed/D4-ORZCjSs8?" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="400" src="https://www.youtube.com/embed/Jc37mjRZ7Dc" frameborder="0" allowfullscreen></iframe>
                 <div class="card-body">
-                    <h5 class="card-title">Publicidad BMW</h5>
-                    <p class="card-text">Anuncio de 5 segundo para Tik Tok.</p>
+                    <h5 class="card-title">Reel de Presentación</h5>
+                    <p class="card-text">Animación con pluggins para instagram.</p>
                 </div>
             </div>
         </div>
