Editando PDF y numero

--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
                         <a class="nav-link" href="./CV Mauricio Issac Montes de Oca Rangel 23.pdf" download="CV Mauricio">CV PDF</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://mauriciomauce.github.io/cvPlantillaBootstrap1/" target="_blank">CV Web</a>
+                        <a class="nav-link" href="https://mauriciomauce.github.io/cvMauricioGit/" target="_blank">CV Web</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./contacto.html">Contacto</a>
@@ -51,9 +51,9 @@
                 <ul">
                     <li><strong>Nombre:</strong> Mauricio I. Montes de Oca Rangel</li>
                     <li><strong>Email:</strong> <a class="correo" href=mailto:mauricio.mauce@icloud.com>mauricio.mauce@icloud.com</a></li>
-                    <li class="numero"><strong>Teléfono (Whatsapp):</strong> 56-2012-3371</li>
+                    <li class="numero"><strong>Teléfono (Whatsapp):</strong> 56-5391-1732</li>
                     <br>
-                    <a aria-label="Chat on WhatsApp" href="https://wa.me/15620123371" target="_blank"><img alt="Chat on WhatsApp" src="./assets/WhatsAppButtonGreenLarge.svg" />
+                    <a aria-label="Chat on WhatsApp" href="https://wa.me/15653911732" target="_blank"><img alt="Chat on WhatsApp" src="./assets/WhatsAppButtonGreenLarge.svg" />
                         <a />
                 </ul>
             </div>
